tank unit function creation

--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -62,6 +62,9 @@
     "        self.board[position] = unit*[1,-1][team]\n",
     "        self.team[team].append(position)\n",
     "\n",
+    "    def tank_unit_ai(self, position):\n",
+    "        pass\n",
+    "    \n",
     "    def default_ai(self, position):\n",
     "        team = self.board[position] < 0\n",
     "        # Move phase\n",
