--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,61 @@
     "        self.board[position] = unit*[1,-1][team]\n",
     "        self.team[team].append(position)\n",
     "\n",
+    "    def unit54(self,position):\n",
+    "        team = self.board[position] < 0\n",
+    "        \n",
+    "        enemy = []\n",
+    "        \n",
+    "        \n",
+    "        #getting the enemy position from my position\n",
+    "        for enemy_pos in self.team[team-1]:\n",
+    "            enemy.append(distance(position,enemy_pos))\n",
+    "        #self.team[indicates which team][indicates position?] \n",
+    "        enemy_pos = self.team[team-1][min(enumerate(enemy),key=lambda x : x[1])[0]]\n",
+    "        \n",
+    "        #i assume position is a tuple\n",
+    "        #my unit will move twice\n",
+    "        temp_pos = [position[0],position[1]]\n",
+    "        new_pos = position\n",
+    "        print(\"Old position:\",new_pos)\n",
+    "        for x in range(2):\n",
+    "            \n",
+    "            if enemy_pos[0]!=temp_pos[0]:\n",
+    "                #What determines if it goes foward or backwards depending on where enemy is\n",
+    "                temp_pos[0] = temp_pos[0]+[1,-1][temp_pos[0]>enemy_pos[0]]\n",
+    "                \n",
+    "            elif enemy_pos[1]!=temp_pos[1]: \n",
+    "                temp_pos[1] = temp_pos[1]+[1,-1][temp_pos[1]>enemy_pos[1]]\n",
+    "                \n",
+    "            #print(temp_pos[0],temp_pos[1])\n",
+    "            if(self.board[(temp_pos[0],temp_pos[1])] == 0):\n",
+    "                new_pos = (temp_pos[0],temp_pos[1])\n",
+    "            \n",
+    "        print(\"New position:\",new_pos)\n",
+    "\n",
+    "        #moves if there is no unit on it\n",
+    "        if self.board[new_pos] != 0:\n",
+    "            \n",
+    "            new_pos = position\n",
+    "        else:\n",
+    "            self.board[position] = 0\n",
+    "            self.board[new_pos] = [1,-1][team] * 1\n",
+    "            \n",
+    "            \n",
+    "        #updates new distances after move\n",
+    "        enemy = []\n",
+    "        for enemy_pos in self.team[team-1]:\n",
+    "            enemy.append(distance(position, enemy_pos))\n",
+    "        # print('enemy distances', enemy)\n",
+    "        min_dist = min(enemy)\n",
+    "        if min_dist <= 1.1:\n",
+    "            # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "            if random.random() > 0.3:\n",
+    "                # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "        return new_pos, None\n",
+    "            \n",
+    "    \n",
     "    def default_ai(self, position):\n",
     "        team = self.board[position] < 0\n",
     "        # Move phase\n",
@@ -98,7 +153,7 @@
     "        return new_pos, None\n",
     "    \n",
     "    def turn(self, team):\n",
-    "        unit_ai = [0,self.default_ai]\n",
+    "        unit_ai = [0,self.unit54]\n",
     "        if self.index[team] == len(self.team[team]):\n",
     "            if self.index[team-1] == len(self.team[team-1]):\n",
     "                self.index = [0,0]\n",
@@ -150,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -158,38 +213,64 @@
      "output_type": "stream",
      "text": [
       "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  1.  0.  0. -1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0. -1.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  1.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0. -1.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0. -1. -1.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n"
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
+      "Old position: (1, 1)\n",
+      "New position: (3, 1)\n",
+      "Old position: (1, 5)\n",
+      "New position: (1, 3)\n",
+      "Old position: (1, 2)\n",
+      "New position: (1, 2)\n",
+      "Old position: (3, 4)\n",
+      "New position: (4, 3)\n",
+      "Old position: (4, 2)\n",
+      "New position: (4, 2)\n",
+      "Old position: (6, 5)\n",
+      "New position: (4, 5)\n",
+      "Old position: (3, 1)\n",
+      "New position: (1, 1)\n",
+      "Old position: (1, 3)\n",
+      "New position: (1, 3)\n",
+      "Old position: (1, 1)\n",
+      "New position: (1, 2)\n",
+      "Old position: (4, 5)\n",
+      "New position: (4, 3)\n",
+      "Old position: (4, 2)\n",
+      "New position: (4, 2)\n",
+      "Old position: (1, 3)\n",
+      "New position: (1, 3)\n",
+      "Old position: (4, 2)\n",
+      "New position: (4, 2)\n",
+      "Old position: (1, 3)\n",
+      "New position: (3, 3)\n",
+      "Old position: (4, 2)\n",
+      "New position: (3, 2)\n",
+      "Old position: (3, 3)\n",
+      "New position: (3, 3)\n",
+      "[ 1. 16.]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "/var/folders/bd/126yvkv50d1cjxc0144dqz4c0000gn/T/ipykernel_62529/3280105524.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.board[position] = unit*[1,-1][team]\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "/var/folders/bd/126yvkv50d1cjxc0144dqz4c0000gn/T/ipykernel_62529/3280105524.py:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.team[team].append(position)\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:23: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:34: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  self.board[new_pos] = [1,-1][team]*1\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:25: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.72  31.698]\n"
+      "/var/folders/bd/126yvkv50d1cjxc0144dqz4c0000gn/T/ipykernel_62529/3280105524.py:35: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  temp_pos[0] = temp_pos[0]+[1,-1][temp_pos[0]>enemy_pos[0]]\n",
+      "/var/folders/bd/126yvkv50d1cjxc0144dqz4c0000gn/T/ipykernel_62529/3280105524.py:52: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team] * 1\n",
+      "/var/folders/bd/126yvkv50d1cjxc0144dqz4c0000gn/T/ipykernel_62529/3280105524.py:38: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  temp_pos[1] = temp_pos[1]+[1,-1][temp_pos[1]>enemy_pos[1]]\n"
      ]
     }
    ],
@@ -197,14 +278,14 @@
     "size = 10\n",
     "board = np.zeros((size, size))\n",
     "board[1,2] = 1\n",
-    "board[6,1] = 1\n",
+    "board[1,1] = 1\n",
     "board[4,2] = 1\n",
-    "board[6,4] = -1\n",
+    "board[3,4] = -1\n",
     "board[6,5] = -1\n",
-    "board[5,5] = -1\n",
+    "board[1,5] = -1\n",
     "print(board)\n",
     "winners = []\n",
-    "for i in range(1000):\n",
+    "for i in range(1):\n",
     "    game = Game(size)\n",
     "    game.create_board(board)\n",
     "    winners.append(game.run())\n",
@@ -217,11 +298,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -235,9 +323,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
