--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,42 @@
     "        self.board[position] = unit*[1,-1][team]\n",
     "        self.team[team].append(position)\n",
     "\n",
+    "        \n",
+    "# Tank units move like infantry units (towards closest enemy), except their kill percentage is halfed, \n",
+    "# and their death percentage is halfed.\n",
     "    def tank_unit_ai(self, position):\n",
-    "        pass\n",
+    "        team = self.board[position] < 0\n",
+    "        # Move phase\n",
+    "        enemy = []\n",
+    "        for enemy_pos in self.team[team-1]:\n",
+    "            enemy.append(distance(position, enemy_pos))\n",
+    "        enemy_pos = self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "        if enemy_pos[0]!=position[0]:\n",
+    "            new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
+    "        elif enemy_pos[1]!=position[1]: \n",
+    "            new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
+    "        else:\n",
+    "            new_pos = position\n",
+    "        if self.board[new_pos] != 0:\n",
+    "            new_pos = position\n",
+    "        else:\n",
+    "            self.board[position] = 0\n",
+    "            self.board[new_pos] = [1,-1][team]*1\n",
+    "        \n",
+    "        # action phase\n",
+    "        enemy = []\n",
+    "        for enemy_pos in self.team[team-1]:\n",
+    "            enemy.append(distance(position, enemy_pos))\n",
+    "        # print('enemy distances', enemy)\n",
+    "        min_dist = min(enemy)\n",
+    "        if min_dist <= 1.1:\n",
+    "            # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "    # kill percentage is half for tank\n",
+    "            if random.random() > 0.6:\n",
+    "                # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "        return new_pos, None\n",
+    "    \n",
     "    \n",
     "    def default_ai(self, position):\n",
     "        team = self.board[position] < 0\n",
@@ -153,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,15 +210,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-4-97afd1940f74>:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.board[position] = unit*[1,-1][team]\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-4-97afd1940f74>:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.team[team].append(position)\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:23: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-4-97afd1940f74>:26: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:34: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-4-97afd1940f74>:37: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.board[new_pos] = [1,-1][team]*1\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_12196\\3073364454.py:25: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-4-97afd1940f74>:28: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n"
      ]
     },
@@ -192,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.72  31.698]\n"
+      "[ 0.731 31.793]\n"
      ]
     }
    ],
@@ -238,9 +272,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
