--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -153,7 +153,7 @@
     "        return new_pos, None\n",
     "    \n",
     "    def turn(self, team):\n",
-    "        unit_ai = [0,self.unit54]\n",
+    "        unit_ai = [0,self.default_ai]\n",
     "        if self.index[team] == len(self.team[team]):\n",
     "            if self.index[team-1] == len(self.team[team-1]):\n",
     "                self.index = [0,0]\n",
