--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -62,7 +62,7 @@
     "        self.board[position] = unit*[1,-1][team]\n",
     "        self.team[team].append(position)\n",
     "\n",
-    "    def unit54(self,position):\n",
+    "    def cavalry(self,position):\n",
     "        team = self.board[position] < 0\n",
     "        \n",
     "        enemy = []\n",
@@ -153,7 +153,7 @@
     "        return new_pos, None\n",
     "    \n",
     "    def turn(self, team):\n",
-    "        unit_ai = [0,self.default_ai]\n",
+    "        unit_ai = [0,self.default_ai, self.cavalry]\n",
     "        if self.index[team] == len(self.team[team]):\n",
     "            if self.index[team-1] == len(self.team[team-1]):\n",
     "                self.index = [0,0]\n",
