some comments for tank

--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -57,17 +57,17 @@
     "\n",
     "    def add_unit(self, unit, position, team):\n",
     "        if self.board[position] != 0:\n",
-    "            # print(\"board has a\",self.board[position],\"unit at\", position)\n",
     "            return\n",
     "        self.board[position] = unit*[1,-1][team]\n",
     "        self.team[team].append(position)\n",
     "\n",
     "        \n",
     "# Tank units move like infantry units (towards closest enemy), except their kill percentage is halfed, \n",
-    "# and their death percentage is halfed.\n",
+    "# and their death percentage is halfed (death percentage to be implemented later).\n",
     "    def tank_unit_ai(self, position):\n",
     "        team = self.board[position] < 0\n",
-    "        # Move phase\n",
+    "        \n",
+    "        # MOVE PHASE: will move towards the closest enemy\n",
     "        enemy = []\n",
     "        for enemy_pos in self.team[team-1]:\n",
     "            enemy.append(distance(position, enemy_pos))\n",
@@ -82,16 +82,17 @@
     "            new_pos = position\n",
     "        else:\n",
     "            self.board[position] = 0\n",
-    "            self.board[new_pos] = [1,-1][team]*1\n",
+    "            # tank unit will be displayed on the board by number 3\n",
+    "            self.board[new_pos] = [1,-1][team]*3\n",
     "        \n",
-    "        # action phase\n",
+    "        # ACTION PHASE: killed smth, didn't kill smth, or can't kill smth\n",
     "        enemy = []\n",
     "        for enemy_pos in self.team[team-1]:\n",
     "            enemy.append(distance(position, enemy_pos))\n",
-    "        # print('enemy distances', enemy)\n",
+    "        # the closest enemy to the tank unit\n",
     "        min_dist = min(enemy)\n",
     "        if min_dist <= 1.1:\n",
-    "            # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "    # this just figures out which unit should be killed and the actual killing happens later on\n",
     "    # kill percentage is half for tank\n",
     "            if random.random() > 0.6:\n",
     "                # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
