added pytorch testing, NN only

--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,71 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0. -1.]\n",
-      " [ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0. -1.  0.]\n",
-      " [ 1.  0.  0.  1.  0.  0.  0.  0. -1.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0. -1.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0. -1.  0.]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  self.board[position] = unit*[1,-1][team]\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  self.team[team].append(position)\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:23: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:34: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  self.board[new_pos] = [1,-1][team]*1\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:25: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.691\n"
-     ]
-    }
-   ],
-   "source": [
-    "size = 10\n",
-    "# board = np.zeros((size, size))\n",
-    "board = random_board()\n",
-    "print(board)\n",
-    "winners = []\n",
-    "for i in range(1):\n",
-    "    game = Game(size)\n",
-    "    game.create_board(board)\n",
-    "    winners.append(game.run())\n",
-    "print(np.mean(winners, axis=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_board(size=10,units=[1,2],max_units=6):\n",
+    "def random_board(size=10,units=[1,2,3,4],max_units=6):\n",
     "    board = np.zeros(shape=(size,size))\n",
     "    # team0_board = board[:,:size//2]\n",
     "    # team1_board = board[:,size//2:]\n",
@@ -368,7 +308,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  2.  0.  0.  0.  0. -3.  0.  0.]\n",
+      " [ 3.  4.  1.  0.  0.  0. -2. -2.  0. -4.]\n",
+      " [ 0.  4.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 3.  0.  0.  2.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  3.  3. -2.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  4.  2.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 1.  0.  3.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  2.  0.  0.  0.  0.  0.]\n",
+      " [ 2.  1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  4.  0.  0.  0. -3.  0.  0.  0.  0.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:10: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[position] = unit*[1,-1][team]\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.team[team].append(position)\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:147: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:70: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  temp_pos[0] = temp_pos[0]+[1,-1][temp_pos[0]>enemy_pos[0]]\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:86: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team] * 3\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:158: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team]*2\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:24: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:112: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:123: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team]*1\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:34: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team]*4\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:149: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:73: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  temp_pos[1] = temp_pos[1]+[1,-1][temp_pos[1]>enemy_pos[1]]\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:114: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:26: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.002 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "size = 10\n",
+    "# board = np.zeros((size, size))\n",
+    "board = random_board()\n",
+    "print(board)\n",
+    "winners = []\n",
+    "for i in range(1000):\n",
+    "    game = Game(size)\n",
+    "    game.create_board(board)\n",
+    "    winners.append(game.run())\n",
+    "print(np.mean(winners), np.sum(winners))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,34 +412,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:10: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.board[position] = unit*[1,-1][team]\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.team[team].append(position)\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:60: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:70: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  temp_pos[0] = temp_pos[0]+[1,-1][temp_pos[0]>enemy_pos[0]]\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:86: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team] * 3\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:26: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:69: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:34: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team]*4\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:147: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:158: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.board[new_pos] = [1,-1][team]*2\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:58: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:24: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:23: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:34: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:73: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  temp_pos[1] = temp_pos[1]+[1,-1][temp_pos[1]>enemy_pos[1]]\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:114: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:123: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.board[new_pos] = [1,-1][team]*1\n",
-      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\844307592.py:25: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:112: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
+      "C:\\Users\\co41c\\AppData\\Local\\Temp\\ipykernel_16268\\3819378594.py:149: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(100):\n",
+    "for _ in range(1000):\n",
     "    new_run('results.csv')"
    ]
   },
