adding tankiness interaction between agents

--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "3.605551275463989"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,14 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Game:\n",
     "    def __init__(self, size):\n",
     "        self.board = np.zeros(shape=(size,size))\n",
+    "        # list of team 0 coordinates, list of team 1 coordinates\n",
     "        self.team = [[],[]]\n",
+    "        # describes which unit's turn it is\n",
     "        self.index = [0,0]\n",
     "\n",
     "    def add_unit(self, unit, position, team):\n",
@@ -65,7 +67,6 @@
     "# and their death percentage is halfed (death percentage to be implemented later).\n",
     "    def tank_unit_ai(self, position):\n",
     "        team = self.board[position] < 0\n",
-    "        \n",
     "        # MOVE PHASE: will move towards the closest enemy\n",
     "        enemy = []\n",
     "        for enemy_pos in self.team[team-1]:\n",
@@ -81,7 +82,7 @@
     "            new_pos = position\n",
     "        else:\n",
     "            self.board[position] = 0\n",
-    "            # tank unit will be displayed on the board by number 3\n",
+    "            # tank unit will be displayed on the board by number 4\n",
     "            self.board[new_pos] = [1,-1][team]*4\n",
     "        \n",
     "        # ACTION PHASE: killed smth, didn't kill smth, or can't kill smth\n",
@@ -91,12 +92,18 @@
     "        # the closest enemy to the tank unit\n",
     "        min_dist = min(enemy)\n",
     "        if min_dist <= 1.1:\n",
-    "    # this just figures out which unit should be killed and the actual killing happens later on\n",
-    "    # kill percentage is half for tank\n",
-    "            if random.random() > 0.6:\n",
-    "                # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
-    "                return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "            if enemy == 4:\n",
+    "                if random.random() > 0.8:\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "        # this just figures out which unit should be killed and the actual killing happens later on\n",
+    "        # kill percentage is half for tank\n",
+    "            else:\n",
+    "                if random.random() > 0.6:\n",
+    "                    # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
     "        return new_pos, None\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    def cavalry_ai(self,position):\n",
     "        team = self.board[position] < 0\n",
@@ -144,10 +151,14 @@
     "        # print('enemy distances', enemy)\n",
     "        min_dist = min(enemy)\n",
     "        if min_dist <= 1.1:\n",
-    "            # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
-    "            if random.random() > 0.3:\n",
-    "                # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
-    "                return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "            if enemy == 4:\n",
+    "                if random.random() > 0.65:\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "            else:\n",
+    "                # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                if random.random() > 0.3:\n",
+    "                    # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
     "        return new_pos, None\n",
     "            \n",
     "    \n",
@@ -180,10 +191,14 @@
     "        # print('enemy distances', enemy)\n",
     "        min_dist = min(enemy)\n",
     "        if min_dist <= 1.1:\n",
-    "            # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
-    "            if random.random() > 0.2:\n",
-    "                # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
-    "                return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "            if enemy == 4:\n",
+    "                if random.random() > 0.6:\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "            else:\n",
+    "                # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                if random.random() > 0.2:\n",
+    "                    # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
     "        return new_pos, None\n",
     "    \n",
     "    def ranged_ai(self, position):\n",
@@ -215,14 +230,18 @@
     "        # print('enemy distances', enemy)\n",
     "        min_dist = min(enemy)\n",
     "        if min_dist < 4:\n",
-    "            # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
-    "            if random.random() > 0.6:\n",
-    "                # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
-    "                return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "            if enemy == 4:\n",
+    "                if random.random() > 0.8:\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
+    "            else:\n",
+    "                # print(team,'attempts to kill someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                if random.random() > 0.6:\n",
+    "                    # print(team,'killed someone at',self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]])\n",
+    "                    return new_pos, self.team[team-1][min(enumerate(enemy), key=lambda x: x[1])[0]]\n",
     "        return new_pos, None\n",
     "    \n",
     "    def turn(self, team):\n",
-    "        unit_ai = [0,self.default_ai, self.ranged_ai, self.cavalry_ai, self.tank_unit_ai]\n",
+    "        unit_ai = [0, self.default_ai, self.ranged_ai, self.cavalry_ai, self.tank_unit_ai]\n",
     "        # What is this doing?\n",
     "        if self.index[team] == len(self.team[team]):\n",
     "            if self.index[team-1] == len(self.team[team-1]):\n",
@@ -276,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 178,
    "metadata": {
     "scrolled": false
    },
@@ -286,37 +305,31 @@
      "output_type": "stream",
      "text": [
       "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  2.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0. -2.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0. -1.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0. -1. -1.  0.  0. -2. -2.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  4.  4.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0. -4. -4.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
-      "[ 0.731 54.507]\n"
+      "[0.59 8.07]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:11: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-94-b58f7fd37655>:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.board[position] = unit*[1,-1][team]\n",
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-94-b58f7fd37655>:13: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  self.team[team].append(position)\n",
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:58: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-94-b58f7fd37655>:25: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:69: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  self.board[new_pos] = [1,-1][team]*2\n",
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:60: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:23: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:34: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  self.board[new_pos] = [1,-1][team]*1\n",
-      "/var/folders/0k/2wv4kb410kq15jrmmg3mv1vr0000gn/T/ipykernel_67584/60201828.py:25: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "<ipython-input-94-b58f7fd37655>:35: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  self.board[new_pos] = [1,-1][team]*4\n",
+      "<ipython-input-94-b58f7fd37655>:27: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
       "  new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n"
      ]
     }
@@ -324,22 +337,30 @@
    "source": [
     "size = 10\n",
     "board = np.zeros((size, size))\n",
-    "board[1,2] = 2\n",
-    "board[2,1] = 1\n",
-    "board[6,1] = 1\n",
-    "board[4,2] = 1\n",
-    "board[3,4] = -1\n",
-    "board[6,5] = -1\n",
-    "board[5,5] = -1\n",
-    "board[4,5] = -2\n",
-    "board[6,8] = -2\n",
-    "board[6,9] = -2\n",
+    "board[4,4] = 4\n",
+    "board[4,5] = 4\n",
+    "board[5,4] = -4\n",
+    "board[5,5] = -4\n",
+    "# board[0,2] = 2\n",
+    "# board[0,1] = 2\n",
+    "# board[0,3] = 2\n",
+    "# board[0,4] = 2\n",
+    "\n",
+    "\n",
+    "# board[5,4] = -3\n",
+    "# board[6,5] = -3\n",
+    "# board[5,5] = -3\n",
+    "# board[5,6] = -3\n",
+    "# board[5,8] = -3\n",
+    "\n",
     "print(board)\n",
     "winners = []\n",
-    "for i in range(1):\n",
+    "for i in range(100):\n",
     "    game = Game(size)\n",
     "    game.create_board(board)\n",
     "    winners.append(game.run())\n",
+    "    \n",
+    "# team 1 win percentage (negative units), average number of turns\n",
     "print(np.mean(winners, axis=0))"
    ]
   },
@@ -360,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
